<resources>
    <string name="app_name">Fornec</string>
    <string name="title_activity_principal_cliente">PrincipalClienteActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="salvar">Salvar</string>


    <!-- Menu Clientes  -->
    <string name="menu_busca_fornecedores">Buscar Fornecedores</string>

    <!-- Menu de fornecedores  -->
    <string name="menu_avaliacoes">Avaliações</string>
    <string name="menu_solicitacao">Solicitacões</string>

    <!-- Menu comum a todos  -->
    <string name="menu_principal">Principal</string>
    <string name="menu_editar_perfil"> Editar Perfil </string>
    <string name="menu_sair">Sair</string>

    <!-- Seções  -->
    <string name="sessao_minha_conta">Minha Conta</string>
    <string name="sessao_navegacao">Navegação</string>


    <string name="text">Exemplo</string>

    <!-- Validacaoes -->
    <string name="login_valUsuario">Usuário obrigatório.</string>
    <string name="login_valSenha">Senha obrigatório.</string>
    <string name="campo_obrigatorio">Campo obrigatório.</string>

    <!-- Mensagens -->
    <string name="msg_login_incorreto">E-mail e/ou senha inválido.</string>
    <string name="title_activity_cad_cliente">Cadastro de Clientes</string>
    <string name="title_activity_cad_fornecedores">Cadastro de Fornecedores</string>
    <string name="hello_world">Hello world!</string>
    <string name="mensagem_cadastro">Registro cadastrado com sucesso!</string>
    <string name="mensagem_atualizar">Registro atualizado com sucesso!</string>
    <string name="mensagem_erro">Erro ao salvar!</string>
    <string name="mensagem_senhas_diferentes">As senhas não coincidem!</string>
    <string name="mensagem_erro_email_cadastrado">Email já cadastrado</string>
    <string name="title_activity_lista_fornecedor">Fornecedores</string>
    <string name="mensagem_sem_cadastro">Email não cadastrado</string>
    <string name="mensagem_avaliacao">Sucesso! Agradecemos sua avaliação.</string>


    <!-- Componentes  -->
    <string name="bt_logar">Entrar</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="check_manter_conectado">Manter conectado</string>
    <string name="text_sem_cadastro">Não tem cadastro? Clique aqui</string>
    <string name="text_recupera_senha">Esqueci minha senha</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_estado">Estado</string>
    <string name="hint_cidade">Cidade</string>
    <string name="hint_bairro">Bairro</string>
    <string name="hint_telefone">DDD+Telefone</string>
    <string name="hint_confirm_senha">Confirmar senha</string>
    <string name="hint_cnpj">Cnpj</string>
    <string name="hint_produtos">Produtos oferecidos, separe por espaço</string>
    <string name="hint_mensagem">Mensagem(Opcional)</string>
    <string name="hint_perfil_produtos">Produtos oferecidos</string>
    <string name="hint_perfil_cidade">Cidade do fornecedor</string>
    <string name="hint_perfil_texto_informe">Toque no botão ao lado para uma nova chamada ou orçamento.</string>
    <string name="bt_buscar_fornecedor">Buscar Fornecedores</string>
    <string name="text_boas_vindas_cliente">Olá, seja bem vindo ao Fornec App! Busque seus fornecedores aqui!</string>
    <string name="text_boas_vindas_fornecedor">Olá, seja bem vindo ao Fornec App!</string>


</resources>
