<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="myproject.com.fornec.Activity.CadastroFornecedorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_cad_fornec_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editCadFornecNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome"
                android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_cad_fornec_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editCadFornecEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_cad_fornec_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editCadFornecSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_senha"
                android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_cad_fornec_confirm_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editCadFornecConfirmSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_senha"
                android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/textViewLocalizacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sua Localização"
                android:textColor="#00BFFF"
                />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_cad_fornec_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editCadFornecEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_estado"

                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_cad_fornec_cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editCadFornecCidade"
                android:hint="@string/hint_cidade"

                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_cad_fornec_bairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editCadFornecBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_bairro"
                android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textViewDadosPessoais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dados Pessoais"
                android:textColor="#00BFFF"
                />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_cad_fornec_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editCadFornecTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_telefone"
                android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_cad_fornec_cnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editCadFornecCnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cnpj"
                android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textViewCadFornecCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Categoria de Produto"
                android:textColor="#00BFFF"
                />
            <Spinner
                android:id="@+id/spinnerCadFornec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_cad_fornec_produtos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editCadFornecProtutos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_produtos"
                android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
